# easydock

./: .gitignore  README.md  changelog.md  env.yml  mkdocs.yml  pyproject.toml  setup.py
containers/: carsidock_server.py
containers/carsidock/: Dockerfile  carsidock_server.def  carsidock_server.py  create_server.def
containers/surfdock/: Dockerfile  check_esm_embedding.py  dock_server.sh  dock_server_cpu.sh  environment.yaml  global_vars.py  init_server.sh  (+3 more)
docs/: advanced.md  binary_dock.md  changelog.md  citation.md  custom_docking.md  custom_protonation.md  customization.md  data_retrieval.md  database_schema.md  generic_dock.md  index.md  installation.md  licenses.md  plif.md  posebusters.md  python_api.md  requirements.txt  server_protocol.md  usage.md
easydock/: __init__.py  args_validation.py  auxiliary.py  binary_dock.py  carsidock_server.py  config_carsidock.yml  containers.py  database.py  easydock_bust.py  easydock_plif.py  get_sdf_from_dock_db.py  gnina_dock.py  make_clean_copy.py  persistent_client.py  preparation_for_docking.py  protonation.py  qvina_dock.py  read_input.py  reporting.py  run_dock.py  run_dock_obsolete.py  server_dock.py  session.py  vina_dock.py  vina_dock_cli.py  vinagpu_dock.py
examples/: 25.smi  README.md  config_carsidock.yml  config_gnina.yml  config_qvina.yml  config_surfdock.yml  config_vina.yml  config_vinagpu.yml
moldock/: get_sdf_from_dock_db.py  gnina_dock.py  gnina_docking.py  preparation_for_docking.py  run_dock.py  vina_dock.py  vina_dock_cli.py  vina_docking.py
tests/: test_pdbqt.py  test_server_dock.py
(+21 files in other folders)
